--- a/src/modules/_item.scss
+++ b/src/modules/_item.scss
@@ -37,7 +37,7 @@
 }
 
 .item-meta-info {
-  color: colors.$fg2;
+  color: colors.$fg1;
 }
 
 .item-meta-icons {
