--- a/src/modules/_variables.scss
+++ b/src/modules/_variables.scss
@@ -11,9 +11,9 @@
   --body-background: #{colors.$bg0};
   --hr-border-color: #{colors.$bg1};
   --title-color: #{colors.$fg0};
-  --link-color: #{colors.$fg1};
-  --link-focus-color: #{colors.$fg2};
-  --link-hover-color: #{colors.$fg2};
+  --link-color: #{colors.$fg0};
+  --link-focus-color: #{colors.$fg1};
+  --link-hover-color: #{colors.$fg1};
   --link-visited-color: #{colors.$bg1};
   --header-link-color: #{colors.$fg1};
   --header-link-focus-color: #{colors.$accent};
@@ -63,14 +63,14 @@
   --category-background-color: #{colors.$bg1};
   --category-border-color: #{colors.$bg2};
   --category-link-color: #{colors.$accent};
-  --category-link-hover-color: #{colors.$fg2};
+  --category-link-hover-color: #{colors.$accent};
   --item-border-color: #{colors.$bg1};
   --item-title-link-font-weight: 400;
   --item-status-read-title-link-color: #{colors.$fg1};
   --entry-header-border-color: #{colors.$fg2};
   --entry-header-title-link-color: #{colors.$fg0};
-  --entry-content-color: #{colors.$fg1};
-  --entry-content-quote-color: #{colors.$fg2};
+  --entry-content-color: #{colors.$fg0};
+  --entry-content-quote-color: #{colors.$fg1};
   --entry-content-code-color: #{colors.$fg0};
   --entry-content-code-background: #{colors.$bg1};
   --entry-content-code-border-color: transparent;
